# Studies-Automatas

./: Automata.hpp  CMakeLists.txt  main.cpp
Automata/: Automata.hpp  CMakeLists.txt  TransitionTable.hpp
DFA/: CMakeLists.txt  main.cpp
NFA/: CMakeLists.txt  input.txt  main.cpp
TuringMachine/: CMakeLists.txt  Tape.hpp  TurinMachine.hpp  TuringMachine.hpp  TuringMachineTransitionTable.hpp  main.cpp
